# 2DG

./: .gitignore  CMakeLists.txt  README.md  build-wasm.bat
examples/graph/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
examples/graph/assets/: node.frag  node.vert
graph/: CMakeLists.txt  graph.data  graph.js  graph.wasm  index.html  main.cpp  window.cpp  window.hpp
graph/assets/: node.vert  stb_easy_font.h  text.frag  text.vert
